force-app/main/default/objects/Task_Template_Step__c/Task_Template_Step__c.object-meta.xml
<CustomObject>
    <label>Task Template Step</label>
    <nameField>
        <label>Task Template Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>