force-app/main/default/objects/Task_Template_Step__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <defaultValue>&quot;Task&quot;</defaultValue>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Type</valueSetName>
    </valueSet>
</CustomField>