force-app/main/default/objects/Task_Template_Step__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <description>The ID of the assigned user, queue, etc. that is used.  A lightning component fills this in.</description>
    <label>Assignee Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>