force-app/main/default/objects/Task_Template_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>A description of the template step.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>