force-app/main/default/objects/Task_Template_Step__c/fields/Duration_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Days__c</fullName>
    <label>Duration In Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>