force-app/main/default/objects/Task_Template_Step__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>The order of the steps when displayed under the template.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>