force-app/main/default/objects/Task_Template_Step__c/fields/Parent_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task_Template__c</fullName>
    <label>Parent Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Template Steps (Parent Task Template)</relationshipLabel>
    <relationshipName>Parent_Task_Template_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>