force-app/main/default/objects/Task_Template_Step__c/fields/Template_Master__c.field-meta.xml
<CustomField>
    <fullName>Template_Master__c</fullName>
    <formula>CASESAFEID(Parent_Task_Template__r.Master_Task_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Master</label>
    <type>Text</type>
</CustomField>