force-app/main/default/objects/Task_Template_Step__c/fields/Templated_Name__c.field-meta.xml
<CustomField>
    <fullName>Templated_Name__c</fullName>
    <inlineHelpText>Used as a template for the task/event name.  Can include [Name] for object name and [StepOrder] for step order fields to be included in the activity name at creation.</inlineHelpText>
    <label>Templated Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>