force-app/main/default/objects/Task_Template_Step__c/listViews/Template_Steps.listView-meta.xml
<ListView>
    <fullName>Template_Steps</fullName>
    <columns>NAME</columns>
    <columns>Activity_Type__c</columns>
    <columns>Assigned_To_Name__c</columns>
    <columns>Parent_Task_Template__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Template Steps</label>
</ListView>